Spring-Boot-Security-using-OAuth2-with-JWT integration

--- a/src/App.css
+++ b/src/App.css
@@ -12,192 +12,11 @@ body{
    background-color: #f3f5f9;
 }
 
-.wrapper{
-  display: flex;
- }
-
-.wrapper .sidebar{
-  width: 200px;
-  height: 100%;
-  background: #4b4276;
-  padding: 30px 0px;
-  position: fixed;
-}
-
-.wrapper .sidebar h2{
-  color: #fff;
-  text-transform: uppercase;
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-.wrapper .sidebar ul li{
-  padding: 18px;
-  border-bottom: 1px solid #bdb8d7;
-  border-bottom: 1px solid rgba(0,0,0,0.05);
-  border-top: 1px solid rgba(255,255,255,0.05);
-}    
-
-.wrapper .sidebar ul a{
-  color: #bdb8d7;
-  display: block;
-}
-
-.wrapper .sidebar ul li .fas{
-  width: 30px !important;
-}
-
-.wrapper .sidebar ul li:hover{
-  background-color: #594f8d;
-}
-    
-.wrapper .sidebar ul li:hover a{
-  color: #fff;
-}
- 
-.wrapper .sidebar .social_media{
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-}
-
-.wrapper .sidebar .social_media a{
-  display: block;
-  width: 40px;
-  background: #594f8d;
-  height: 40px;
-  line-height: 45px;
-  text-align: center;
-  margin: 0 5px;
-  color: #bdb8d7;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-}
-
-
-
-.wrapper .main_content .header{
-  padding: 20px;
-  background: #fff;
-  color: #717171;
-  border-bottom: 1px solid #e0e4e8;
-}
-
-.wrapper  .info{
-  margin: 90px;
-  color: #717171;
-  line-height: 25px;
-}
-
-
-.wrapper  .info div{
+.example {
+  margin: 20px 0;
   margin-bottom: 20px;
-}
-
-
-
-.sidebar-item{
-  padding: .75em 1em;
-  display: block;
-  transition: background-color .15s;
-  border-radius: 5px;
-  color: #fff;
-}
-.sidebar-item:hover{
-  background-color: rgba(255, 255, 255, .1);
-}
-
-.sidebar-title{
-  display: flex;
-  font-size: 1.2em;
-  justify-content: space-between;
-}
-.sidebar-title span i{
-  display: inline-block;
-  width: 1.5em;
-}
-.sidebar-title .toggle-btn{
-  cursor: pointer;
-  transition: transform .3s;
-}
-.sidebar-item.open > .sidebar-title .toggle-btn{
-  transform: rotate(180deg);
-}
-.sidebar-content{
-  padding-top: .25em;
-  height: 0;
-  overflow: hidden;
-}
-.sidebar-item.open > .sidebar-content{
-  height: auto;
-}
-
-.sidebar a{
-  color: #fff;
-  text-decoration: none;
-}
-
-.sidebar i{
-  display: inline-block;
-  width: 1.7em !important;
-}
-
-
-
-/* nav */
-.wrapper #interface {
-  width:100%;
-  margin-left: 200px;
-  position: relative;
-}
-
- .navigation {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: #fff;
-  padding: 15px 30px;
-  border-bottom: 3px solid #594ef7;
-  position: fixed;
-  width: calc(100% - 200px);
-}
-
-.navigation .search {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 10px 14px;
-  border: 1px solid #d7dbe6;
+  padding: 30px 50px;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.05);
   border-radius: 4px;
-}
-
- .navigation .search i {
-  margin-right: 14px;
-}
-
- .navigation .search input {
-  border: none;
-  outline: none;
-  font-size: 14px;
-}
-
- .navigation .profile {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
- .navigation .profile i {
-  margin-right: 20px;
-  font-size: 19px;
-  font-weight: 400;
-}
-
- .navigation .profile img {
-  width: 30px;
-  height: 30px;
-  object-fit: cover;
-  border-radius: 50%;
 }
