--- a/src/components/singup/Singup.css
+++ b/src/components/singup/Singup.css
@@ -4,7 +4,8 @@
   justify-content: center;
   height: 100vh ;
 }
-.login-form{
+.singup-form{
 border: 1px solid gray;
 padding: 30px;
+width: 30%;
 }
